@@ -29,9 +29,8 @@ public class GoogleHadoopGlobalRootedFileSystemContract2Test
   extends FileSystemContractBaseTest {
 
   @Before
-  @Override
-  public void setUp()
-      throws IOException {
+  @SuppressWarnings("MissingOverride")
+  public void setUp() throws IOException {
     fs = GoogleHadoopFileSystemTestHelper.createInMemoryGoogleHadoopGlobalRootedFileSystem();
   }
 
@@ -56,10 +55,8 @@ public class GoogleHadoopGlobalRootedFileSystemContract2Test
   }
 
   @Override
-  public void testMkdirsWithUmask() throws Exception {
-  }
+  public void testMkdirsWithUmask() {}
 
   @Override
-  public void testListStatusThrowsExceptionForNonExistentFile() throws Exception  {
-  }
+  public void testListStatusThrowsExceptionForNonExistentFile() {}
 }
