@@ -1,5 +1,7 @@
 1.6.6 - 2018-XX-XX
 
+  1. Hadoop 3 build compatibility.
+
 
 1.6.5 - 2018-04-12
 
